--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <div id="root">Not rendered</div>
     
 
-    <script type="module" src="script.js"></script>
+    <script type="module" src="src/script.js"></script>
 </body>
 </html>
